stateDiagram-v2
  [*] --> New
  New --> Triage
  Triage --> WaitingForPayment
  Triage --> Assigned
  WaitingForPayment --> Assigned
  Assigned --> InProgress
  InProgress --> WaitingForResident
  WaitingForResident --> InProgress
  InProgress --> ManagerReview
  ManagerReview --> Completed
  ManagerReview --> Rework
  Rework --> InProgress
  Completed --> Closed
  New --> Cancelled
  Assigned --> Cancelled
  Closed --> [*]
  Cancelled --> [*]